# QOSF

./: .gitignore  .pylintrc  README.md  draft.py  draper_adder.py  main.py  requirements.txt  setup.cfg  test.ipynb  test.py
demo/: demo.ipynb  draper_demo.ipynb
src/adder_rry.egg-info/: PKG-INFO  SOURCES.txt
src/draper_adder/: draper_adder.py  main.py
src/draperrry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_draper_adder.py
