[metadata]
name = draperrry
version = 0.0.1
author = Ricky Young
author_email = rickyyoung@qbraid.com
description = A small package to add two numbers together within quantum computing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rryoung98/QOSF
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
